[ITT-498] Regenerated Payment/BinLookup/PosTerminalManagement (#1009)
* Regen BinLookup

* Regen PosTerminalManagement

* regenerated payment api

* fix tests after conflict